Pull- Alokasi API
