# storage/api-docs/api-docs.json
@@ -5,6 +5,57 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/alokasi": {
+            "get": {
+                "tags": [
+                    "Alokasi"
+                ],
+                "summary": "Get List",
+                "description": "pencarian dg keyword akan mengarah pada nama sls",
+                "operationId": "alokasi_list",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "current page to show",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "filter and pagination",
+                    "required": false,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "keyword": {
+                                        "type": "string"
+                                    },
+                                    "kab_filter": {
+                                        "type": "string"
+                                    },
+                                    "kec_filter": {
+                                        "type": "string"
+                                    },
+                                    "desa_filter": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "default": {
+                        "description": "return array model kategori"
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "tags": [
@@ -754,7 +805,7 @@
                     }
                 ],
                 "requestBody": {
-                    "description": "in data, just send object with property kode_prov, kode_kab, kode_kec, kode_desa, id_sls, id_sub_sls,\n     *                      nurt, kepala_ruta, jumlah_art, jumlah_unit_usaha, subsektor1_a, subsektor1_b, subsektor2_a, subsektor2_b,\n     *                      subsektor3_a, subsektor3_b, subsektor4_a, subsektor4_b, subsektor4_c, subsektor5_a, subsektor5_b, subsektor5_c,\n     *                      subsektor6_a, subsektor6_b, subsektor6_c, subsektor7_a, jml_308_sawah, jml_308_bukan_sawah, jml_308_rumput_sementara,\n     *                      jml_308_rumput_permanen, jml_308_belum_tanam, jml_308_ternak_bangunan_lain, jml_308_kehutanan, jml_308_budidaya,\n     *                      jml_308_lahan_lainnya, daftar_komoditas, start_time, end_time, start_latitude, end_latitude, start_longitude, end_longitude",
+                    "description": "in data, just send object with property kode_prov, kode_kab, kode_kec, kode_desa, id_sls, id_sub_sls,\r\n     *                      nurt, kepala_ruta, jumlah_art, jumlah_unit_usaha, subsektor1_a, subsektor1_b, subsektor2_a, subsektor2_b,\r\n     *                      subsektor3_a, subsektor3_b, subsektor4_a, subsektor4_b, subsektor4_c, subsektor5_a, subsektor5_b, subsektor5_c,\r\n     *                      subsektor6_a, subsektor6_b, subsektor6_c, subsektor7_a, jml_308_sawah, jml_308_bukan_sawah, jml_308_rumput_sementara,\r\n     *                      jml_308_rumput_permanen, jml_308_belum_tanam, jml_308_ternak_bangunan_lain, jml_308_kehutanan, jml_308_budidaya,\r\n     *                      jml_308_lahan_lainnya, daftar_komoditas, start_time, end_time, start_latitude, end_latitude, start_longitude, end_longitude",
                     "required": true,
                     "content": {
                         "application/json": {
